<?xml version="1.0"?>
<package format="2">
  <name>rs_autonomy</name>
  <version>0.1.0</version>
  <description>MAPE-K based autonomy realized by ROS nodes</description>
  <maintainer email="suj@email.sc.edu">Jianhai Su</maintainer>
  <author email="suj@email.sc.edu">Jianhai Su</author>
  <license>NASA OPEN SOURCE AGREEMENT VERSION 1.3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>ow_lander</depend>
  <depend>ow_faults</depend>
  <depend>ow_plexil</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
